fix: 상담신청 버튼 위로 z-index 조정, 추천상품 가격 디자인 스타일 조정

--- a/components/Mypage/Mypage.module.scss
+++ b/components/Mypage/Mypage.module.scss
@@ -381,6 +381,7 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
     border-radius: 50%;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
     animation: booking 2s 3s infinite ease-in-out;
+    z-index: 100;
     .ani_booking {
       margin-top: 3px;
       width: 90%;
